# cjdic2

./: .gitattributes  .gitignore  Cargo.toml  README.md  cjdic2.code-workspace  make-icon.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.js
cjdic2-next/: package.json
cjdic2-next/src-tauri/: Cargo.toml  tauri.conf.json
cjdic2-next/src-tauri/capabilities/: default.json
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/rust/: Cargo.toml
js-server/: package.json
js-server/scripts/: supabase-download.ts
js-server/src/: server.ts
scripts/: make-resource-manifest.js
src/: App.vue
src-core/: Cargo.toml  README.md
src-core/examples/: add-to-yomitan.rs  add_yomitan_dict_folder.rs  benchmark_json_zstd.rs  benchmark_zstd_decomp.rs  ja_tokenize.rs  remove_one_yomitan_dict.rs  search-yomitan.rs  search_yomitan.rs  yomitan-mod-schema.rs  yomitan_update_schema.rs
src-core/examples/common/: mod.rs
src-core/src/: api.rs  db.rs  error.rs  lib.rs  models.rs  service.rs  tokenizer.rs  util.rs
src-core/src/db/: search.rs  yomitan.rs  yomitan_writer.rs
src-react/: README.md  package.json  vite.config.ts
src-react/src/: App.css  App.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.mobile.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitignore
src-tauri/src/: command.rs  db.rs  lib.rs  main.rs  state.rs
storage-worker/: env.d.ts  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
storage-worker/src/: index.ts
(+23 files in other folders)
