[package]
name = "cjdic2-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled", "unlock_notify"] }
thiserror = "2.0.18"
zip = "8.1.0"
blake3 = "1.8.3"
anyhow = "1.0.102"
vibrato = "0.5.2"
zstd = "0.13.3"
